--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
     background-color: aliceblue;
-    primary-color: rgb(18, 134, 18);
-    secondary-color: rgb(98, 218, 98);
+    --primary-color: rgb(18, 134, 18);
+    --secondary-color: rgb(98, 218, 98);
 }
 
 * {
@@ -32,4 +32,27 @@ h2 {
     max-width: 80rem;
     margin: 0 auto;
     padding: 2rem;
+}
+
+#home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn {
+    font-size: 2.4rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: white;
+    background-color: var(--primary-color);
+    border-radius: 4px;
+}
+
+.btn:hover {
+    background-color: var(--secondary-color);
 }
