--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,58 +1,203 @@
-:root {
-    background-color: aliceblue;
-    --primary-color: rgb(18, 134, 18);
-    --secondary-color: rgb(98, 218, 98);
-}
-
 * {
     box-sizing: border-box;
+  }
+
+:root {
+    --primary: rgb(18, 134, 18);
+    --secondary: rgb(98, 218, 98);
+    --tertiary: rgb(211, 56, 144);
+    --white: rgb(255, 255, 255);
+    font-size: 62.5%;
+}
+
+body {
+    background: #ededed;
+    color: var(--secondary);
     margin: 0;
     padding: 0;
-    font-size: 62.5%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  /* Header */
+  header {
+      display: flex;
+      justify-content: space-between;
+      margin: auto;
+      width: 85%;
+  }
 
-h1 {
-    font-size: 5.4rem;
-    color: black;
-    margin-bottom: 5rem;
-}
+  #view-high-scores:hover {
+      cursor: pointer;
+      color: var(--tertiary)
+  }
 
-h2 {
-    font-size: 4.2rem;
-    margin-bottom: 4rem;
-}
+  header h4 {
+      padding-left: 20px;
+      font-size: 2.0rem;
+      display: inline;
+  }
+  
+ .timer {
+      font-size: 2.0rem;
+      color: var(--primary);
+      display: inline;
+      text-align: right;
+      padding-right: 20px;
+  }
 
+  /*Main content */
 .container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 80rem;
-    margin: 0 auto;
-    padding: 2rem;
-}
+      padding: 20px;
+      flex-direction: column;
+      width: 50%;
+      margin: auto;
+  }
 
-#home {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+  
+ h1 {
+    color: var(--primary);
+    font-size: 3.0rem;
+    font-weight: bold;
+  }
 
-.btn {
-    font-size: 2.4rem;
-    padding: 2rem 0;
-    width: 30rem;
+  p {
+    color: var(--primary);
+    font-size: 2.0rem;
+  }
+
+  .start {
+    align-items: center;
     text-align: center;
-    margin-bottom: 1rem;
-    text-decoration: none;
-    color: white;
-    background-color: var(--primary-color);
-    border-radius: 4px;
+    }
+  
+ .start h1, .start p {
+     text-align: center;
+ }
+
+  .questions {
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 40px 20px;
+    margin: auto;
+  }
+
+  .end h1, .end p {
+      text-align: left
+  }
+
+  .end input {
+    outline: thick; 
+    border-width: 1px;
+    padding: 5px;
+    width: 35%;
+    font-size: 2.2rem;
+    border-radius: 5px;
+  }
+
+  .end input:focus {
+    border: 2px solid var(--secondary);
+  }
+
+  .show {
+      display: flex;
+  }
+
+  .hide {
+      display: none;
+  }
+
+  #question {
+    color: var(--primary);
+    text-align: left;
+    font-size: 3.0rem;
+    font-weight: bold;
+  }
+
+  #high-score {
+      text-align: left;
+  }
+
+  /*Button Styling */
+  .btn {
+      background: var(--secondary);
+      color: var(--white);
+      padding: 10px;
+      border-radius: 10px;
+      border: none;
+      box-shadow: 0 3px grey;
+      margin-top: 10px;
+  }
+
+  .btn:hover {
+      background: var(--tertiary);
+      border-radius: 10px;
+      box-shadow: 0 2px grey;
+      cursor: pointer;
+  }
+
+  .btn:active {
+      border: none;
+      outline: none;
+      box-shadow: 0 0 grey;
+  }
+
+  .btn:focus {
+      outline: none;
+  }
+
+  .btn-grid {
+      display: grid;
+      grid-template-rows: repeat(4, auto);
+      grid-gap: 5px;
+      margin: 20px 0;
+  }
+
+ .startend {
+     width: 25%;
+     margin-top: 10px;
+ }
+
+ .answerbtn {
+     width: 50%;
+     text-align: left;
+     font-size: 3.0vw;
+ }
+
+/* List for High Scores */
+ 
+ ol {
+    list-style-type: number;
+ }
+
+ li:nth-child(odd) {
+     background-color: rgba(228, 151, 164, 0.5);;
+ }
+
+
+li {
+    font-size: 4.0vw;
 }
 
-.btn:hover {
-    background-color: var(--secondary-color);
+/* media query for smaller screens */
+
+@media screen and (max-width: 1024px) {
+
+    .btn {
+        width: 100%;
+        font-size: 3.0vw;
+    }
+
+    #question {
+        font-size: 4.5vw;
+    }
+
+    h1 {
+        font-size: 4.5vw;
+    }
+
+    p {
+        font-size: 3.0vw;
+    }
+
 }
+
